--- a/configs/sampling.yml
+++ b/configs/sampling.yml
@@ -3,8 +3,8 @@ model:
 
 sample:
   seed: 2021
-  num_samples: 100
+  num_samples: 20
   num_steps: 1000
   pos_only: False
   center_pos_mode: protein
-  sample_num_atoms: prior
+  sample_num_atoms: inpainting_ref
